--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 asgiref==3.8.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
-decouple==0.0.7
 Django==5.0.3
+gunicorn==22.0.0
 idna==3.6
 pillow==10.2.0
 python-decouple==3.8
@@ -10,4 +10,5 @@ requests==2.31.0
 sqlparse==0.4.4
 tzdata==2024.1
 urllib3==2.2.1
+
 
